Revision history for Pod-Weaver

{{$NEXT}}

3.101630  2010-06-12 14:42:26 America/New_York
          Author section now emits a normal para or bulleted list (Florian
          Ragwitz)

3.101460  2010-05-26 22:36:13 America/New_York
          compat with Config::MVP::Reader v2

3.101450  2010-05-25 18:38:44 America/New_York
          compat with Config::MVP::Reader v1

3.101270  2010-05-07 21:36:45 America/New_York
          allow an explicit header arg to Generic

3.100710  2010-03-12 10:03:42 America/New_York
          further logging improvements; now uses Log::Dispatchouli explicitly

3.100680  2010-03-09 23:38:30 America/New_York
          improve logging delegation to interoperate with recent DZ changes

3.100650  2010-03-06 23:21:19 America/New_York
          expect a Log::Dispatchouli-like logger
          added a means to tweak the configuration loaded during new
          log the file in which errors occur more often

3.100310  2010-01-31 15:32:00 America/New_York
          add =func/FUNCTIONS to match =method and =attr
          require newer Pod::Elemental (to avoid Moose incompat)

3.093530  2009-12-19 22:52:47 America/New_York
          add the -Transformer plugin to allow pass-through for arbitrary
          Pod::Elemental::Transformers

3.093130  2009-11-09
          add Config::MVP::Reader::INI to prereq

3.093120  2009-11-08
          fix broken prereq (Config::MVP)

3.093001  2009-10-27
          create @Default and use it to set up the new_with_default_config

3.093000  2009-10-27
          plugins for common preparation: -H1Nester, -EnsurePod5, @CorePrep
          "-" as prefix now denotes a non-Section plugin
          tweak weaving phases and methods to add Dialect

3.092990  2009-10-26
          Pod::Weaver::Config and tests for config-from-ini

3.092972  2009-10-24
          no code changes; Pod robuilt

3.092971  2009-10-24
          fixes to make the NAME section "just work"

3.092970  2009-10-24
          total rewrite
